// import { shallow } from "enzyme"

// import App from '../../app/layout/App'

// test('Should render App correctly', () => {

//   const wrapper = shallow(<App />)
//   expect(wrapper).toMatchSnapshot()
// })

test('Will be refactored', () => {
  const message = 'Will be refactored after mobx store implementation'
  expect('Will be refactored after mobx store implementation').toBe(message)
})

export {}