// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render App correctly 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <ul />
  </header>
</div>
`;

exports[`Should render App correctly with data 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <ul>
      <li
        key="1"
      >
        Value 1
      </li>
      <li
        key="2"
      >
        Value 2
      </li>
      <li
        key="3"
      >
        Value 3
      </li>
    </ul>
  </header>
</div>
`;
